cm4all-workshop (0.1.7) unstable; urgency=low

  * bugfix: added missing 'return' when the concurrency limit is reached

 --

cm4all-workshop (0.1.6) unstable; urgency=low

  * fixed endless loop in expand_vars()
  * pass PostgreSQL DSN as environment variable, for security reasons
  * increased shutdown timeout to 60 seconds
  * moved the -doc package to section non-free/doc

 -- Max Kellermann <mk@cm4all.com>  Mon, 12 Feb 2007 11:17:48 +0100

cm4all-workshop (0.1.5) unstable; urgency=low

  * fixed "SIGHUP" typo in init script
  * removed ellipsis from init script messages
  * use libcm4all-daemon
  * don't build with cdbs
  * check PostgreSQL notifies after every query

 -- Max Kellermann <mk@cm4all.com>  Tue,  6 Feb 2007 10:04:37 +0100

cm4all-workshop (0.1.4) unstable; urgency=low

  * set supplementary groups
  * delete pidfile before exiting
  * moved VERSION to version.h
  * use start-stop-daemon instead of LSB's start_daemon due to Debian bug
    #406059
  * log with multilog by default

 -- Max Kellermann <mk@cm4all.com>  Mon, 29 Jan 2007 15:27:38 +0100

cm4all-workshop (0.1.3) unstable; urgency=low

  * added plan variable NODE
  * documented the plan variables
  * disallow user "root" for plans
  * check stdin_null() return value
  * don't close(0) in daemonize()
  * fixed double queue run on startup

 -- Max Kellermann <mk@cm4all.com>  Thu,  9 Nov 2006 12:05:39 +0100

cm4all-workshop (0.1.2) unstable; urgency=low

  * using libevent

 -- Max Kellermann <mk@cm4all.com>  Thu, 19 Oct 2006 11:00:15 +0200

cm4all-workshop (0.1.1) unstable; urgency=low

  * added -doc package
  * build-depend on xsltproc and docbook-xsl
  * install .sql file
  * doc: added installation instructions

 -- Max Kellermann <mk@cm4all.com>  Mon, 16 Oct 2006 14:55:43 +0200

cm4all-workshop (0.1.0) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Mon, 16 Oct 2006 12:07:01 +0200